--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,30 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+
+/* Solution */
+.container, .plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.plants {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.title {
+  margin: 32px;
+}
+
+.plant {
+  width: 200px;
+  gap: 8px;
+}
+
+.text{
+  text-align: center;
+}
