--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -40,11 +40,11 @@ img {
 }
 
 .title {
-  margin: 32px;
+  margin-bottom: 32px;
 }
 
 .plant {
-  width: 200px;
+  max-width: 200px;
   gap: 8px;
 }
 
