--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,35 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* solution */
+.modal {
+  display: flex;
+  gap: 12px;
+  padding: 12px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.header-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.close-button {
+  margin-left: auto;
+}
+
+.text {
+  margin-bottom: 8px;
+}
